Update drag'n'drop when modifiers are pressed/released

This is workaround for QTBUG-57168.