src/gui/clipboardbrowser.cpp
@@ -220,6 +220,25 @@ void ClipboardBrowser::emitItemCount()
         emit itemCountChanged( tabName(), length() );
 }
 
+bool ClipboardBrowser::eventFilter(QObject *, QEvent *event)
+{
+    // WORKAROUND: Update drag'n'drop when modifiers are pressed/released (QTBUG-57168).
+    if (event->type() == QEvent::KeyPress || event->type() == QEvent::KeyRelease) {
+        const auto kev = static_cast<QKeyEvent*>(event);
+        const auto key = kev->key();
+        if (key == Qt::Key_Control || key == Qt::Key_Shift) {
+            const auto screenPos = QCursor::pos();
+            const auto localPos = mapFromGlobal(screenPos);
+            QMouseEvent mouseMove(
+                        QEvent::MouseMove, localPos, screenPos, Qt::NoButton,
+                        QApplication::mouseButtons(), QApplication::queryKeyboardModifiers() );
+            QCoreApplication::sendEvent(this, &mouseMove);
+        }
+    }
+
+    return false;
+}
+
 bool ClipboardBrowser::isFiltered(int row) const
 {
     if ( d.searchExpression().isEmpty() || !m_itemSaver)
@@ -864,6 +883,9 @@ void ClipboardBrowser::focusInEvent(QFocusEvent *event)
 void ClipboardBrowser::dragEnterEvent(QDragEnterEvent *event)
 {
     dragMoveEvent(event);
+
+    // WORKAROUND: Update drag'n'drop when modifiers are pressed/released (QTBUG-57168).
+    qApp->installEventFilter(this);
 }
 
 void ClipboardBrowser::dragLeaveEvent(QDragLeaveEvent *event)
@@ -991,6 +1013,7 @@ void ClipboardBrowser::mouseMoveEvent(QMouseEvent *event)
     // Default action is "copy" which works for most apps,
     // "move" action is used only in item list by default.
     Qt::DropAction dropAction = drag->exec(Qt::CopyAction | Qt::MoveAction, Qt::CopyAction);
+    qApp->removeEventFilter(this);
 
     if (dropAction == Qt::MoveAction) {
         selected.clear();
